# drawbridge

./: Cargo.toml
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/auth/: Cargo.toml
crates/byte/: Cargo.toml
crates/client/: Cargo.toml
crates/hash/: Cargo.toml
crates/jose/: Cargo.toml
crates/name/src/: lib.rs
crates/server/: Cargo.toml
crates/store/: Cargo.toml
crates/tags/: Cargo.toml
crates/tags/src/: hash.rs  lib.rs  tag.rs
crates/tags/src/storage/: memory.rs  mod.rs
crates/tree/: Cargo.toml
crates/tree/src/: lib.rs
crates/type/: Cargo.toml
src/: lib.rs
