[package]
name = "drawbridge"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[workspace]
members = [
    "crates/byte",
    "crates/jose",
    "crates/tree",
    "crates/type",
    "crates/tags",
]

[dependencies]
# Internal dependencies
drawbridge-name = { path = "./crates/name" }

# External dependencies
axum = { version = "0.5.0" }
tokio = { version = "1.17.0", features = [ "full" ] }

[patch.crates-io]
http = { git = "https://github.com/npmccallum/http", rev = "0f4438e7f5107d8b06142894d2d9cd5186b721ab" }
