[package]
name = "drawbridge-byte"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.136", default-features = false, features = ["alloc"], optional = true }
