[package]
name = "drawbridge-tree"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[dependencies]
drawbridge-type = { path = "../type" , features = ["server"]}

axum = { version = "0.5.0", default-features = false, features = ["headers"] }
tokio = { version = "1.17.0" }
tokio-util =  { version = "0.7.1", features = ["io"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
axum-macros = "0.2.0"
